Set minimum width to prevent inputs from reducing to incovenient sizes on small devices.

--- a/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
+++ b/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
@@ -18,6 +18,7 @@
     text-align: center;
     padding: 10px;
 	width: 30vw;
+    min-width: 178px;
 }
   
 .Header {
@@ -41,4 +42,5 @@
     min-width: 75px;
     color: #5a473a;
     background-color: #fff8ed;
+    flex-wrap: wrap;
 }
